--- a/src/Tessera.App/Views/DrawingPageView.axaml
+++ b/src/Tessera.App/Views/DrawingPageView.axaml
@@ -166,60 +166,74 @@
                 </ItemsControl>
             </Panel>
         </Grid>
-        <StackPanel Grid.Column="1" Margin="15,0" VerticalAlignment="Center" Spacing="10">
-            <Border Classes="ToolbarBorder">
-                <ListBox 
-                    ItemsSource="{Binding Tools}" 
-                    SelectedItem="{Binding SelectedToolItem}"
-                    Padding="0">
-                    <ListBox.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Vertical" />
-                        </ItemsPanelTemplate>
-                    </ListBox.ItemsPanel>
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <Border 
-                                ToolTip.Tip="{Binding Name}">
-                                <Svg Path="{Binding Icon}" Width="20" />
-                            </Border>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                    <ListBox.Styles>
-                        <Style Selector="ListBoxItem">
-                            <Setter Property="Cursor" Value="Hand"/>
-                            <Setter Property="Padding" Value="0,5"/>
-                            <Setter Property="BorderThickness" Value="0,0,0,1" />
-                            <Setter Property="BorderBrush" Value="#E5E7EB" />
-                            <Setter Property="Background" Value="White" />
-                        </Style>
-                        <Style Selector="ListBoxItem:selected /template/ ContentPresenter">
-                            <Setter Property="Background" Value="Transparent"/>	
-                        </Style>
-                        <Style Selector="ListBoxItem:selected Border">
-                            <Setter Property="Background" Value="{DynamicResource PrimaryActiveBackground}"/>	
-                        </Style>
-                        <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter">
-                            <Setter Property="Background" Value="{DynamicResource PrimaryHoverBackground}"/>	
-                        </Style>
-                    </ListBox.Styles>
-                </ListBox>
+        <StackPanel Grid.Column="1" Margin="15,0" VerticalAlignment="Center" Spacing="10" Orientation="Horizontal">
+            <Border 
+                IsVisible="{Binding IsToolSettingsOpen}"
+                Background="White"
+                BorderBrush="#E5E7EB"
+                BorderThickness="1"
+                CornerRadius="5"
+                BoxShadow="0 1 3 0 #10000000"
+                Padding="8"
+                Width="32">
+                <c:CanvasToolSettings ToolSettings="{Binding SelectedToolItem.ToolSettings}" />
             </Border>
-            <Border Classes="ToolbarBorder">
-                <StackPanel Orientation="Vertical">
-                    <Button Command="{Binding ClearAllCommand}"
-                            ToolTip.Tip="Clear All"
-                            Classes="FunctionBtn"
-                            BorderThickness="0,0,0,1">
-                        <Svg Path="/Assets/Icons/broom.svg" Width="20"/>
-                    </Button>
-                    <Button Command="{Binding OpenOptionsCommand}"
-                            ToolTip.Tip="Open options"
-                            Classes="FunctionBtn">
-                        <Svg Path="/Assets/Icons/gear.svg" Width="20"/>
-                    </Button>
-                </StackPanel>
-            </Border>
+            <StackPanel>
+                <Border Classes="ToolbarBorder">
+                    <ListBox 
+                        ItemsSource="{Binding Tools}" 
+                        SelectedItem="{Binding SelectedToolItem}"
+                        Padding="0"
+                        Tapped="OnToolListBoxTapped">
+                        <ListBox.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Vertical" />
+                            </ItemsPanelTemplate>
+                        </ListBox.ItemsPanel>
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Border 
+                                    ToolTip.Tip="{Binding Name}">
+                                    <Svg Path="{Binding Icon}" Width="20" />
+                                </Border>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
+                        <ListBox.Styles>
+                            <Style Selector="ListBoxItem">
+                                <Setter Property="Cursor" Value="Hand"/>
+                                <Setter Property="Padding" Value="0,5"/>
+                                <Setter Property="BorderThickness" Value="0,0,0,1" />
+                                <Setter Property="BorderBrush" Value="#E5E7EB" />
+                                <Setter Property="Background" Value="White" />
+                            </Style>
+                            <Style Selector="ListBoxItem:selected /template/ ContentPresenter">
+                                <Setter Property="Background" Value="Transparent"/>	
+                            </Style>
+                            <Style Selector="ListBoxItem:selected Border">
+                                <Setter Property="Background" Value="{DynamicResource PrimaryActiveBackground}"/>	
+                            </Style>
+                            <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter">
+                                <Setter Property="Background" Value="{DynamicResource PrimaryHoverBackground}"/>	
+                            </Style>
+                        </ListBox.Styles>
+                    </ListBox>
+                </Border>
+                <Border Classes="ToolbarBorder">
+                    <StackPanel Orientation="Vertical">
+                        <Button Command="{Binding ClearAllCommand}"
+                                ToolTip.Tip="Clear All"
+                                Classes="FunctionBtn"
+                                BorderThickness="0,0,0,1">
+                            <Svg Path="/Assets/Icons/broom.svg" Width="20"/>
+                        </Button>
+                        <Button Command="{Binding OpenOptionsCommand}"
+                                ToolTip.Tip="Open options"
+                                Classes="FunctionBtn">
+                            <Svg Path="/Assets/Icons/gear.svg" Width="20"/>
+                        </Button>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </UserControl>
