--- a/src/Tessera.App/App.axaml
+++ b/src/Tessera.App/App.axaml
@@ -15,7 +15,8 @@
         
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <MergeResourceInclude Source="/Controls/IconButton.axaml"></MergeResourceInclude>
+	            <MergeResourceInclude Source="/Controls/IconButton.axaml"></MergeResourceInclude>
+                <MergeResourceInclude Source="/Styles/AppColors.axaml"></MergeResourceInclude>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
         
