--- a/src/Tessera.App/Controls/CanvasToolSettings.axaml
+++ b/src/Tessera.App/Controls/CanvasToolSettings.axaml
@@ -45,6 +45,56 @@
         <Style Selector="ListBoxItem:pointerover /template/ ContentPresenter">
             <Setter Property="Background" Value="{DynamicResource PrimaryHoverBackground}"/>	
         </Style>
+        <Style Selector="ListBox.ColorsListBox">
+            <Setter Property="ItemsPanel">
+                <ItemsPanelTemplate>
+                    <WrapPanel 
+                        Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </Setter>
+            <Setter Property="ItemTemplate">
+                <DataTemplate DataType="{x:Type IBrush}">
+                    <Ellipse Fill="{Binding}" Width="14" Height="14" />
+                </DataTemplate>
+            </Setter>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+        <Style Selector="ListBox.SizeListBox">
+            <Setter Property="ItemsPanel">
+                <ItemsPanelTemplate>
+                    <WrapPanel 
+                        Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </Setter>
+            <Setter Property="ItemTemplate">
+                <DataTemplate DataType="{x:Type m:ShapeSize}">
+                    <TextBlock
+                        Text="{Binding Name}"
+                        ToolTip.Tip="{Binding Description}"
+                        FontSize="12"
+                        FontWeight="DemiBold"
+                        HorizontalAlignment="Center"/>
+                </DataTemplate>
+            </Setter>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+        <Style Selector="ListBox.ShapeTypeListBox">
+            <Setter Property="ItemsPanel">
+                <ItemsPanelTemplate>
+                    <WrapPanel 
+                        Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </Setter>
+            <Setter Property="ItemTemplate">
+                <DataTemplate DataType="{x:Type m:StrokeType}">
+                    <Svg Path="{Binding IconPath}" Width="14"/>
+                </DataTemplate>
+            </Setter>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        </Style>
     </UserControl.Styles>
     <UserControl.Resources>
         <converters:ColorToBrushConverter x:Key="ColorToBrushConverter" />
@@ -87,153 +137,67 @@
                         <DataTemplate DataType="{x:Type m:PointShapeToolSettings}">
                             <StackPanel>
                                 <ListBox 
+                                    Classes="ColorsListBox"
                                     ItemsSource="{Binding AvailableColors}" 
-                                    SelectedItem="{Binding PointColor}"
-                                    Background="Transparent" 
-                                    HorizontalAlignment="Center">
-                                    <ListBox.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <WrapPanel 
-                                                Orientation="Horizontal" />
-                                        </ItemsPanelTemplate>
-                                    </ListBox.ItemsPanel>
-                                    <ListBox.ItemTemplate>
-                                        <DataTemplate>
-                                            <Ellipse Fill="{Binding}" Width="14" Height="14" />
-                                        </DataTemplate>
-                                    </ListBox.ItemTemplate>
+                                    SelectedItem="{Binding Color}">
                                 </ListBox>
                                 <Slider 
                                     Value="{Binding Opacity}"
-                                    Minimum="0"
-                                    Maximum="1"
-                                    />
+                                    Minimum="0.1"
+                                    Maximum="1" />
                                 <ListBox 
+                                    Classes="SizeListBox"
                                     ItemsSource="{Binding AvailableSizes}" 
-                                    SelectedItem="{Binding PointSize}"
-                                    Background="Transparent" 
-                                    HorizontalAlignment="Center">
-                                    <ListBox.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <WrapPanel 
-                                                Orientation="Horizontal" />
-                                        </ItemsPanelTemplate>
-                                    </ListBox.ItemsPanel>
-                                    <ListBox.ItemTemplate>
-                                        <DataTemplate DataType="{x:Type m:ShapeSize}">
-                                            <TextBlock
-                                                Text="{Binding Name}"
-                                                ToolTip.Tip="{Binding Description}"
-                                                FontSize="12"
-                                                FontWeight="DemiBold"
-                                                HorizontalAlignment="Center"/>
-                                        </DataTemplate>
-                                    </ListBox.ItemTemplate>
+                                    SelectedItem="{Binding Size}" >
                                 </ListBox>
                             </StackPanel>
                         </DataTemplate>
                         <DataTemplate DataType="{x:Type m:LineShapeToolSettings}">
-                            <StackPanel>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock
-                                            Grid.Column="0"
-                                            Classes="Label"
-                                            Text="Thickness" />
-                                        <NumericUpDown
-                                            Grid.Column="1"
-                                            Value="{Binding StrokeThickness}"
-                                            BorderBrush="#E5E7EB"
-                                            CornerRadius="5"
-                                            ShowButtonSpinner="False"
-                                            Padding="8,8,0,0"/>
-                                    </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,0, 0, 1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
-                                        <ColorPicker
-                                            Grid.Column="1"
-                                            Color="{Binding StrokeColor}"
-                                            HorizontalAlignment="Right"/>
-                                    </Grid>
-                                </Border>
+                            <StackPanel Spacing="2">
+                                <ListBox 
+                                    Classes="ColorsListBox"
+                                    ItemsSource="{Binding AvailableColors}" 
+                                    SelectedItem="{Binding Color}">
+                                </ListBox>
+                                <Slider 
+                                    Value="{Binding Opacity}"
+                                    Minimum="0.1"
+                                    Maximum="1" />
+                                <ListBox 
+                                    Classes="SizeListBox"
+                                    ItemsSource="{Binding AvailableSizes}" 
+                                    SelectedItem="{Binding Size}" >
+                                </ListBox>
+                                <ListBox 
+                                    Classes="ShapeTypeListBox"
+                                    ItemsSource="{Binding AvailableStrokeTypes}" 
+                                    SelectedItem="{Binding StrokeType}" >
+                                </ListBox>
                             </StackPanel>
                         </DataTemplate>
                         <DataTemplate DataType="{x:Type m:PolylineShapeToolSettings}">
-                            <StackPanel>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock
-                                            Grid.Column="0"
-                                            Classes="Label"
-                                            Text="Thickness" />
-                                        <NumericUpDown
-                                            Grid.Column="1"
-                                            Value="{Binding StrokeThickness}"
-                                            BorderBrush="#E5E7EB"
-                                            CornerRadius="5"
-                                            ShowButtonSpinner="False"
-                                            Padding="8,8,0,0"/>
-                                    </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,0, 0, 1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
-                                        <ColorPicker
-                                            Grid.Column="1"
-                                            Color="{Binding StrokeColor}"
-                                            HorizontalAlignment="Right"/>
-                                    </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,0,0,1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock
-                                            Grid.Column="0"
-                                            Classes="Label"
-                                            Text="Stroke join" />
-                                        <ComboBox Grid.Column="1" 
-                                                  ItemsSource="{Binding AvailableStrokeJoins}"
-                                                  SelectedItem="{Binding SelectedStrokeJoin}"
-                                                  HorizontalAlignment="Stretch" />
-                                    </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,0,0,1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock
-                                            Grid.Column="0"
-                                            Classes="Label"
-                                            Text="Stroke cap" />
-                                        <ComboBox Grid.Column="1" 
-                                                  ItemsSource="{Binding AvailableStrokeCaps}"
-                                                  SelectedItem="{Binding SelectedStrokeCap}"
-                                                  HorizontalAlignment="Stretch"/>
-                                    </Grid>
-                                </Border>
+                            <StackPanel Spacing="2">
+                                <StackPanel Spacing="2">
+                                    <ListBox 
+                                        Classes="ColorsListBox"
+                                        ItemsSource="{Binding AvailableColors}" 
+                                        SelectedItem="{Binding Color}">
+                                    </ListBox>
+                                    <Slider 
+                                        Value="{Binding Opacity}"
+                                        Minimum="0.1"
+                                        Maximum="1" />
+                                    <ListBox 
+                                        Classes="SizeListBox"
+                                        ItemsSource="{Binding AvailableSizes}" 
+                                        SelectedItem="{Binding Size}" >
+                                    </ListBox>
+                                    <ListBox 
+                                        Classes="ShapeTypeListBox"
+                                        ItemsSource="{Binding AvailableStrokeTypes}" 
+                                        SelectedItem="{Binding StrokeType}" >
+                                    </ListBox>
+                                </StackPanel>
                             </StackPanel>
                         </DataTemplate>
                         <DataTemplate DataType="{x:Type m:ShapeToolSettings}">
