--- a/src/Tessera.App/Controls/CanvasToolSettings.axaml
+++ b/src/Tessera.App/Controls/CanvasToolSettings.axaml
@@ -80,7 +80,7 @@
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
         </Style>
-        <Style Selector="ListBox.ShapeTypeListBox">
+        <Style Selector="ListBox.StrokeTypeListBox">
             <Setter Property="ItemsPanel">
                 <ItemsPanelTemplate>
                     <WrapPanel 
@@ -95,12 +95,36 @@
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
         </Style>
+        <Style Selector="ListBox.ShapeTypeListBox">
+            <Setter Property="ItemsPanel">
+                <ItemsPanelTemplate>
+                    <WrapPanel 
+                        Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </Setter>
+            <Setter Property="ItemTemplate">
+                <DataTemplate DataType="{x:Type m:ShapeType}">
+                    <Svg Path="{Binding IconPath}" Width="14"/>
+                </DataTemplate>
+            </Setter>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        </Style>
+        <Style Selector="Button.ShapeButton">
+            <Setter Property="Background" Value="#f1f2f4" />
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            <Setter Property="Padding" Value="6, 8" />
+            <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Style Selector="^:pointerover /template/ ContentPresenter">
+                <Setter Property="Background" Value="#E5E7EB"/>	
+            </Style>
+        </Style>
     </UserControl.Styles>
     <UserControl.Resources>
         <converters:ColorToBrushConverter x:Key="ColorToBrushConverter" />
     </UserControl.Resources>
-    <Border 
-        IsVisible="True"
+    <Border
         Background="White"
         BorderBrush="#E5E7EB"
         BorderThickness="1"
@@ -121,6 +145,7 @@
                                 </ListBox>
                                 <Slider 
                                     Value="{Binding Opacity}"
+                                    ToolTip.Tip="Opacity"
                                     Minimum="0.1"
                                     Maximum="1" />
                                 <ListBox 
@@ -139,6 +164,7 @@
                                 </ListBox>
                                 <Slider 
                                     Value="{Binding Opacity}"
+                                    ToolTip.Tip="Opacity"
                                     Minimum="0.1"
                                     Maximum="1" />
                                 <ListBox 
@@ -147,7 +173,7 @@
                                     SelectedItem="{Binding Size}" >
                                 </ListBox>
                                 <ListBox 
-                                    Classes="ShapeTypeListBox"
+                                    Classes="StrokeTypeListBox"
                                     ItemsSource="{Binding AvailableStrokeTypes}" 
                                     SelectedItem="{Binding StrokeType}" >
                                 </ListBox>
@@ -159,88 +185,73 @@
                                     <ListBox 
                                         Classes="ColorsListBox"
                                         ItemsSource="{Binding AvailableColors}" 
-                                        SelectedItem="{Binding Color}">
-                                    </ListBox>
+                                        SelectedItem="{Binding Color}" />
                                     <Slider 
                                         Value="{Binding Opacity}"
+                                        ToolTip.Tip="Opacity"
                                         Minimum="0.1"
                                         Maximum="1" />
                                     <ListBox 
                                         Classes="SizeListBox"
                                         ItemsSource="{Binding AvailableSizes}" 
-                                        SelectedItem="{Binding Size}" >
-                                    </ListBox>
+                                        SelectedItem="{Binding Size}" />
                                     <ListBox 
-                                        Classes="ShapeTypeListBox"
+                                        Classes="StrokeTypeListBox"
                                         ItemsSource="{Binding AvailableStrokeTypes}" 
-                                        SelectedItem="{Binding StrokeType}" >
-                                    </ListBox>
+                                        SelectedItem="{Binding StrokeType}" />
                                 </StackPanel>
                             </StackPanel>
                         </DataTemplate>
                         <DataTemplate DataType="{x:Type m:ShapeToolSettings}">
-                            <StackPanel>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,1,0,0"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock
-                                            Grid.Column="0"
-                                            Classes="Label"
-                                            Text="Thickness" />
-                                        <ComboBox Grid.Column="1" 
-                                                  ItemsSource="{Binding AvailableShapes}"
-                                                  SelectedItem="{Binding SelectedShapeType}"
-                                                  HorizontalAlignment="Stretch"/>
+                            <StackPanel Spacing="2">
+                                <ListBox 
+                                    Classes="ColorsListBox"
+                                    ItemsSource="{Binding AvailableColors}" 
+                                    SelectedItem="{Binding Color}" />
+                                <Slider 
+                                    Value="{Binding Opacity}"
+                                    ToolTip.Tip="Opacity"
+                                    Minimum="0.1"
+                                    Maximum="1" />
+                                <ListBox 
+                                    Classes="SizeListBox"
+                                    ItemsSource="{Binding AvailableSizes}" 
+                                    SelectedItem="{Binding Size}" />
+                                <ListBox 
+                                    Classes="StrokeTypeListBox"
+                                    ItemsSource="{Binding AvailableStrokeTypes}" 
+                                    SelectedItem="{Binding StrokeType}" />
+                                <Button 
+                                    Name="ShapeButton"
+                                    Classes="ShapeButton" 
+                                    Command="{Binding OpenShapePopupCommand}">
+                                    <Grid ColumnDefinitions="*,Auto" HorizontalAlignment="Stretch">
+                                        <TextBlock Text="Shape" 
+                                                   VerticalAlignment="Center" />
+                                        <Svg Grid.Column="1" 
+                                             Path="{Binding Path=ShapeType.IconPath}" 
+                                             Width="14"
+                                             VerticalAlignment="Center" />
                                     </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock
-                                            Grid.Column="0"
-                                            Classes="Label"
-                                            Text="Thickness" />
-                                        <NumericUpDown
-                                            Grid.Column="1"
-                                            Value="{Binding Thickness}"
+                                </Button>
+                                <Popup IsOpen="{Binding IsShapePopupOpen, Mode=TwoWay}"
+                                       Placement="Left"
+                                       HorizontalOffset="-10"
+                                       PlacementTarget="{Binding #ShapeButton}"
+                                       IsLightDismissEnabled="True">
+                                    <Border Background="White"
                                             BorderBrush="#E5E7EB"
+                                            BorderThickness="1"
                                             CornerRadius="5"
-                                            ShowButtonSpinner="False"
-                                            Padding="8,8,0,0"/>
-                                    </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,0, 0, 1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock Grid.Column="0" Classes="Label" Text="Color" Margin="0,10,0,6"/>
-                                        <ColorPicker
-                                            Grid.Column="1"
-                                            Color="{Binding Color}"
-                                            HorizontalAlignment="Right"/>
-                                    </Grid>
-                                </Border>
-                                <Border
-                                    BorderBrush="#E5E7EB"
-                                    BorderThickness="0,0, 0, 1"
-                                    Padding="20, 7">
-                                    <Grid ColumnDefinitions="*,*"
-                                          Margin="0">
-                                        <TextBlock Grid.Column="0" Classes="Label" Text="Stroke Color" Margin="0,10,0,6"/>
-                                        <ColorPicker
-                                            Grid.Column="1"
-                                            Color="{Binding StrokeColor}"
-                                            HorizontalAlignment="Right"/>
-                                    </Grid>
-                                </Border>
+                                            BoxShadow="0 1 3 0 #10000000"
+                                            Padding="2"
+                                            Width="130">
+                                        <ListBox 
+                                            Classes="ShapeTypeListBox"
+                                            ItemsSource="{Binding AvailableShapeTypes}" 
+                                            SelectedItem="{Binding ShapeType}" />
+                                    </Border>
+                                </Popup>
                             </StackPanel>
                         </DataTemplate>
                         <DataTemplate DataType="{x:Type m:TextShapeToolSettings}">
@@ -301,5 +312,4 @@
             </ScrollViewer>
         </Grid>
     </Border>
- 
 </UserControl>
